--- a/app/src/main/res/layout/fragment_tabsettings.xml
+++ b/app/src/main/res/layout/fragment_tabsettings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
@@ -9,9 +9,30 @@
 
     <Button
         android:id="@+id/btnKeluar"
-        android:layout_width="219dp"
-        android:layout_height="60dp"
-        android:layout_gravity="center"
-        android:text="Logout"></Button>
+        android:layout_width="328dp"
+        android:layout_height="53dp"
+        android:background="@drawable/button"
+        android:hint="Logout"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.469"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.901" />
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/btnProfil"
+        android:layout_width="367dp"
+        android:layout_height="55dp"
+        android:background="@drawable/button"
+        android:hint="Lihat Profil"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.042" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
