Edit Info Profil dan UInya

--- a/app/src/main/res/layout/activity_halaman_utama.xml
+++ b/app/src/main/res/layout/activity_halaman_utama.xml
@@ -37,7 +37,7 @@
         android:id="@+id/spinnerku"
         android:layout_width="328dp"
         android:layout_height="53dp"
-        android:background="#ffffff"
+        android:background="@drawable/edit"
         android:entries="@array/Jenis"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.602"
@@ -52,6 +52,7 @@
         android:layout_height="53dp"
         android:background="@drawable/button"
         android:hint="Simpan"
+        android:textColorHint="#fff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.602"
         app:layout_constraintLeft_toLeftOf="parent"
