--- a/app/src/main/res/layout/fragment_tabsettings.xml
+++ b/app/src/main/res/layout/fragment_tabsettings.xml
@@ -7,32 +7,60 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragment.TabSettings">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="193dp"
+        android:layout_height="186dp"
+        android:background="#00FFF7F7"
+        android:foregroundGravity="center"
+        android:src="@drawable/ic_logo"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.166" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="BookMarkIn Aja !"
+        android:textColor="#000"
+        android:textSize="50px"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.407" />
+
     <Button
         android:id="@+id/btnKeluar"
-        android:layout_width="328dp"
-        android:layout_height="53dp"
+        android:layout_width="145dp"
+        android:layout_height="44dp"
         android:background="@drawable/button"
-        android:hint="Logout"
+        android:hint="LOGOUT"
+        android:textColorHint="#fff"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.469"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.901" />
+        app:layout_constraintVertical_bias="0.938" />
 
     <Button
         android:id="@+id/btnProfil"
-        android:layout_width="367dp"
-        android:layout_height="55dp"
+        android:layout_width="249dp"
+        android:layout_height="47dp"
         android:background="@drawable/button"
-        android:hint="Lihat Profil"
+        android:hint="Informasi Profil"
+        android:textColorHint="#fff"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.042" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
