--- a/app/src/main/res/layout/update_delete.xml
+++ b/app/src/main/res/layout/update_delete.xml
@@ -5,31 +5,45 @@
 
 
     <TextView
-        android:id="@+id/textjudul"
+        android:id="@+id/textJenisaja"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/editJenis"
+        android:hint="Jenis Baru"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine" />
 
-    <Button
-        android:id="@+id/btn_update"
+    <EditText
+        android:id="@+id/editJudul"
+        android:hint="Judul Baru"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:ems="10"
+        android:gravity="start|top"
+        android:inputType="textMultiLine" />
 
-    <Button
-        android:id="@+id/btn_delete"
+    <Spinner
+        android:id="@+id/spinnernew"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:entries="@array/Jenis"
+        />
 
+    <Button
+        android:id="@+id/btnUpdate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Update" />
 
-
+    <Button
+        android:id="@+id/btnDelete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Delete" />
 </LinearLayout>
