--- a/app/src/main/res/layout/activity_halaman_utama.xml
+++ b/app/src/main/res/layout/activity_halaman_utama.xml
@@ -58,7 +58,21 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.92" />
+        app:layout_constraintVertical_bias="0.868" />
+
+    <Button
+        android:id="@+id/btnKembali"
+        android:layout_width="328dp"
+        android:layout_height="53dp"
+        android:background="@drawable/button"
+        android:hint="Kembali"
+        android:textColorHint="#fff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.602"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.961" />
 
     <Button
         android:id="@+id/btnbrowse"
