--- a/app/src/main/res/layout/update_delete.xml
+++ b/app/src/main/res/layout/update_delete.xml
@@ -61,5 +61,12 @@
         android:text="Go to Website"
         android:textColor="#4CAF50" />
 
-
+    <Button
+        android:id="@+id/btnShare"
+        android:layout_width="222dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@drawable/edit"
+        android:text="Share It"
+        android:textColor="#4CAF50" />
 </LinearLayout>
