Update UI Datalist, Share dan Search

--- a/app/src/main/res/layout/activity_data.xml
+++ b/app/src/main/res/layout/activity_data.xml
@@ -7,7 +7,7 @@
         android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="76dp"
-        android:queryHint="Search your bookmark..." />
+        android:queryHint="Search by Category" />
 
     <ListView
         android:id="@+id/ListBook"
