--- a/app/src/main/res/layout/book_list_item.xml
+++ b/app/src/main/res/layout/book_list_item.xml
@@ -6,38 +6,43 @@
     android:background="@drawable/edit2">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="318dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/jenis_txtView"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:text="Email" />
+            android:text="Email"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/judul_txtView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="italic"
-            android:text="Email" />
+            android:text="Email"
+            android:textStyle="italic" />
 
         <TextView
             android:id="@+id/link_txtView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#3F51B5"
-            android:text="Email" />
+            android:text="Email"
+            android:textColor="#3F51B5" />
 
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/gambarData"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/ic_logo" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="97dp">
+
+        <ImageView
+            android:id="@+id/gambarData"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/ic_logo" />
+    </LinearLayout>
 
 </LinearLayout>
